overview: Always animate unblur when exiting overview.

Test: manual
Bug: 833443
Change-Id: Iaf64e0c4edea2ae444d6d55a6103f922c5f33ffb
Reviewed-on: https://chromium-review.googlesource.com/1132476
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Reviewed-by: Xiaoqian Dai <xdai@chromium.org>
Cr-Commit-Position: refs/heads/master@{#574950}
Former-commit-id: 52eead9459362fc576066627aeefc248af5cd9dc